# ProjectX

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml
cmake/: version.h.in  version.in
include/: version.h
include/algorithm/: dijkstra.hpp  partition.hpp  scc.hpp  shortest_path_interface.hpp  union_find.hpp
include/builder/: conversion.hpp  graph.hpp
include/container/: heap_element.hpp  kary_heap.hpp
include/geometry/: constants.hpp  coordinate.hpp  projection.hpp
include/graph/: .forward_star.hpp.swp  decorator.hpp  decorator_factory.hpp  forward_star.hpp  forward_star_factory.hpp  id.hpp  routing.hpp
include/io/: exceptions.hpp  file.hpp  serialisable.hpp  wrappers.hpp
include/iterator/: pointer.hpp
include/log/: logger.hpp
include/route/: route.hpp
include/traits/: strong_typedef.hpp  typemap.hpp
include/util/: singleton.hpp
scripts/python/: import-osm.py
scripts/python/profiles/: car.py
src/algorithm/: CMakeLists.txt  partition.cpp  scc.cpp  union_find.cpp
src/binding/: CMakeLists.txt  xpython.cpp
src/builder/: CMakeLists.txt  graph.cpp
src/geometry/: CMakeLists.txt  projection.cpp
src/graph/: .forward_star.cpp.swp  CMakeLists.txt  forward_star.cpp  forward_star_factory.cpp  routing.cpp
src/io/: CMakeLists.txt  file.cpp
src/log/: CMakeLists.txt  logger.cpp
test/: CMakeLists.txt
test/algorithm/: CMakeLists.txt  dijkstra.cpp  scc.cpp  union_find.cpp
test/builder/: CMakeLists.txt  conversion.cpp  graph.cpp
test/container/: CMakeLists.txt  kary_heap.cpp
test/geometry/: CMakeLists.txt  coordinate.cpp  projection.cpp
test/graph/: CMakeLists.txt  decorator.cpp  forward_star.cpp  routing.cpp
test/io/: CMakeLists.txt  file.cpp
test/logging/: CMakeLists.txt  logging.cpp
test/traits/: CMakeLists.txt  strong_typedef.cpp
